sipcemerlang.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: cemerlang 
  namespace: sicermat-test 
  labels: 
    app: sipcemerlang 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: sipcemerlang 
  template: 
    metadata: 
      labels: 
        app: sipcemerlang 
    spec: 
      containers: 
      - name: sipcemerlang:1.0 
        image: valentinusdimas/sipcemerlang
      - containerPort: 80
        Protocol: TCP
