grafana-1633489984-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-1633489984
  namespace: loki-grafana
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana-1633489984
            port:
              number: 80
