ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: hello-world.coba
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
