my-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "my-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "grafana.test.geschool.id"
    http:
      paths:
      - pathType: "Prefix"
        path: "/"
        backend:
          service:
            name: "grafana-1633489984"
            port:
              number: 80
  - host: "loki.test.geschool.id"
    http:
      paths:
      - pathType: "Prefix"
        path: "/"
        backend:
          service:
            name:  "loki-stack-1633489134"
            port:
              number: 3100
