promse-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-LS
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: lk.test.geschool.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loki
            port:
              number: 3100   
   - host: ps.test.geschool.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loki-prometheus-server
            port:
              number: 9090
