react-login-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-login-ing
  namespace: login-page-main
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: login.test.geschool.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: react-login-svc
            port:
              number: 80
