test-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-wordpress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wordpress.test.geschool.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-1634094920
            port:
              number: 80
